	differently.  Thanks to GeorgeHJ.

	Added <silent> :*map argument that postpones UI updates until RHS is
	completely processed.  Probably not all updates are postponed, to be
	improved as unhandled cases are discovered.

	Added <c-@> angle bracket notation making it possible to map Ctrl-Space
	key.  Thanks to anonymous at Vifm Q2A site.

	:quit, :wq, :exit, :xit, ZZ and ZQ now try to close current tab before
	closing the application.

	More explicit documentation about leaving custom views.  Thanks to
	tagwint.

	Use historical cursor position upon startup by default when 'autochpos' is
	on, this is now independent from "savedirs" in 'vifminfo' option.  Thanks
	to filterfalse.

	Use historical cursor position on navigating to a mark that doesn't specify
	a file by default when 'autochpos' is on.  Thanks to filterfalse.

	Sort entries of :bmarks menu.  Thanks to anonymous at Vifm Q2A site.

	Drop unfinished if-else statements on leaving command-line mode.  Thanks
	to Marcin Kurczewski (a.k.a. rr-).

	Move cursor after p and P to one of files that were moved or to a cause of
	last conflict.  Thanks to filterfalse and ranousse.

	Less strict parsing of output of external command by :[un]select commands.
	Similar to %u/%U and menus allow <file>[:[<line>:[<col>:]] <description>]
	format.  Thanks to j-xella.

	Support italics in quickview/view mode and in :highlight when curses
	implementation provides corresponding extension.  PDCurses doesn't implement
	it on Windows.  Fallback is to use "reversed" attribute.  Thanks to
	GeorgeHJ.

	Escape "=" at the beginning of paths (has special meaning in zsh).  Thanks
	to agguser.

	More accurate error message on handling non directories passed to :cd.

	Slightly better formatting in :undolist menu.

	Report missing closing quote for ""-strings in expressions.

	Make :echo and :execute report parsing errors in more detail than just
	"invalid expression".

	Update status line when cursor is moved on typing local filter when