@@ -337,6 +337,8 @@ TEST(filetype)
 #ifndef _WIN32
 	ASSERT_OK("filetype('2')", "link");
 	ASSERT_OK("filetype('3')", "link");
+	ASSERT_OK("filetype('2', 1)", "dir");
+	ASSERT_OK("filetype('3', 1)", "reg");
 #endif
 
 	opt_handlers_teardown();
